[package]
name = "color-picker-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
yew = "*"
gloo-render = "0.1"
rand = { version = "*", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'HtmlImageElement',
  'WebGlBuffer',
  'WebGlTexture',
  'WebGlProgram',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]
